--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,61 +2,76 @@ name: CI
 
 on:
   push:
-    branches: [main]
+    branches: [main, dev, feature/**]
   pull_request:
+    branches: [main]
+  workflow_dispatch:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  lint:
+  lint-and-test:
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-      - name: Install dependencies
+      - uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements-dev.txt') }}
+          restore-keys: ${{ runner.os }}-pip-
+      - name: Install dev dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
-      - name: Run pre-commit
-        run: pre-commit run --all-files --show-diff-on-failure
-
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'
-      - name: Install dependencies
+      - name: Lint (Ruff + Black + isort)
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
-          pip install -e .
-      - name: Run tests
-        run: pytest --cov=virtual_department --cov-report=xml
-      - name: Upload coverage artifact
-        uses: actions/upload-artifact@v4
+          ruff check .
+          black --check .
+          isort --check-only .
+      - name: Detect secrets
+        run: detect-secrets scan --all-files --fail-on-secrets
+      - name: Run unit tests with coverage
+        env:
+          PYTHONPATH: "${{ github.workspace }}"
+        run: |
+          pytest -q --cov=virtual_department --cov-report=xml
+      - uses: actions/upload-artifact@v4
         with:
           name: coverage-xml
           path: coverage.xml
 
   coverage-badge:
-    needs: test
+    needs: lint-and-test
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: coverage-xml
+      - uses: tj-actions/coverage-badge-py@v2
+        with:
+          coverage_regex: "TOTAL.*\\s+(\\d+%)"
+      - uses: EndBug/add-and-commit@v9
+        with:
+          add: "*.svg"
+          message: "chore(ci): update coverage badge [skip ci]"
+
+  notify-failure:
+    needs: [lint-and-test, coverage-badge]
+    if: failure()
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: slackapi/slack-github-action@v1
         with:
-          python-version: '3.12'
-      - name: Install coverage-badge
-        run: |
-          python -m pip install coverage-badge
-      - name: Generate badge
-        run: coverage-badge -f -o coverage.svg
-      - name: Commit badge
-        uses: EndBug/add-and-commit@v9
-        with:
-          add: 'coverage.svg'
-          message: 'Update coverage badge'
+          payload: |
+            {
+              "text": "\ud83d\udea8 CI failed on ${{ github.repository }} – <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|details>"
+            }
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_CI_WEBHOOK }}
