--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "MAS Dev Container",
-  "image": "mcr.microsoft.com/devcontainers/python:3.12",
+  "service": "app",
   "features": {
     "ghcr.io/devcontainers/features/azure-cli:1": {},
     "ghcr.io/devcontainers/features/terraform:1.8": {},
