--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,7 @@ jobs:
           name: coverage-xml
           path: coverage
       - name: Prepare coverage files
-        run: mv coverage/* .
+        run: mv coverage/.coverage coverage/coverage.xml .
       - name: Debug artifact contents
         run: ls -lah . && ls -lah coverage || true
       - name: Check .coverage and coverage.xml exist
