--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,7 @@ jobs:
         with:
           name: coverage-xml
           path: coverage
+          merge-multiple: true
       - name: Prepare coverage files
         run: mv coverage/.coverage coverage/coverage.xml .
       - name: Debug artifact contents
