--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,14 +89,12 @@ jobs:
           name: coverage-xml
           path: coverage
           merge-multiple: true
-      - name: Prepare coverage files
-        run: mv coverage/.coverage coverage/coverage.xml .
       - name: Debug artifact contents
         run: ls -lah . && ls -lah coverage || true
       - name: Check .coverage and coverage.xml exist
         run: |
-          test -f .coverage || (echo ".coverage not found!" && exit 1)
-          test -f coverage.xml || (echo "coverage.xml not found!" && exit 1)
+          test -f coverage/.coverage || (echo ".coverage not found!" && exit 1)
+          test -f coverage/coverage.xml || (echo "coverage.xml not found!" && exit 1)
       - uses: tj-actions/coverage-badge-py@v2
         with:
           overwrite: true
