--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,9 +2,11 @@
   "name": "MAS Dev Container",
   "service": "app",
   "features": {
-    "ghcr.io/devcontainers/features/azure-cli:1": {},
+    "ghcr.io/devcontainers/features/azure-cli:1": {
+      "version": "latest",
+      "installBicep": true
+    },
     "ghcr.io/devcontainers/features/terraform:latest": {"version": "1.8.4"},
-    "ghcr.io/devcontainers/features/bicep:latest": {}
   },
   "dockerComposeFile": "docker-compose.yml",
   "runServices": ["postgres", "redis"],
