--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,36 +17,46 @@ jobs:
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
+
       - uses: actions/cache@v4
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements-dev.txt') }}
           restore-keys: ${{ runner.os }}-pip-
+
       - name: Install dev dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
+
       - name: Lint (Ruff + Black + isort)
         run: |
           ruff check .
           black --check .
           isort --check-only .
+
       - name: Detect secrets
         run: detect-secrets scan --all-files
+
       - name: Run unit tests with coverage
         env:
           PYTHONPATH: "${{ github.workspace }}"
         run: |
           pytest -q --cov=. --cov-report=xml
+
+      - name: Ensure coverage.xml was generated
+        run: |
+          test -f coverage.xml || (echo "coverage.xml not found after pytest!" && exit 1)
+
       - uses: actions/upload-artifact@v4
         with:
           name: coverage-xml
-          path: |
-            coverage.xml
-            .coverage
+          if-no-files-found: error
+          path: coverage.xml
 
   infra-plan:
     needs: lint-and-test
@@ -57,15 +67,19 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v4
+
       - uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
       - name: Terraform plan
         run: make infra-plan
+
       - name: Show plan
         run: terraform -chdir=infrastructure show -no-color plan.out > plan.txt
+
       - name: Comment plan
         uses: actions/github-script@v7
         with:
@@ -84,20 +98,34 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
+      - uses: actions/checkout@v4
+
       - uses: actions/download-artifact@v4
         with:
           name: coverage-xml
           path: coverage
           merge-multiple: true
+
       - name: Debug artifact contents
-        run: ls -lah . && ls -lah coverage || true
-      - name: Check .coverage and coverage.xml exist
         run: |
-          test -f coverage/.coverage || (echo ".coverage not found!" && exit 1)
+          echo "Top level:"
+          ls -lah .
+          echo "coverage/:"
+          ls -lah coverage || true
+
+      - name: Ensure coverage.xml present
+        run: |
           test -f coverage/coverage.xml || (echo "coverage.xml not found!" && exit 1)
+
+      - name: Copy coverage.xml to repo root for badge generation
+        run: cp coverage/coverage.xml coverage.xml
+
       - uses: tj-actions/coverage-badge-py@v2
         with:
           overwrite: true
+          # If the action supports an explicit input path, uncomment and set it:
+          # path: coverage.xml
+
       - uses: EndBug/add-and-commit@v9
         with:
           add: "*.svg"
